--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -6,6 +6,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.crowdmix.twittererer.TwitterFeedActivity">
+    tools:context="com.crowdmix.twittererer.ui.activities.TimelineActivity">
 
 </RelativeLayout>
