Massage the list item layout a bit

--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -9,19 +9,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="@dimen/large_spacing">
+        android:paddingBottom="@dimen/normal_spacing"
+        android:paddingLeft="@dimen/normal_spacing"
+        android:paddingRight="@dimen/large_spacing"
+        android:paddingTop="@dimen/normal_spacing">
 
         <ImageView
             android:id="@+id/avatar"
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:layout_marginTop="@dimen/small_spacing"
             android:contentDescription="@string/content_description_avatar" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/large_spacing"
-            android:layout_marginStart="@dimen/large_spacing"
+            android:layout_marginLeft="@dimen/normal_spacing"
+            android:layout_marginStart="@dimen/normal_spacing"
             android:orientation="vertical">
 
             <LinearLayout
@@ -34,24 +38,28 @@
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp"
                     tools:text="Bob Smith" />
 
                 <TextView
                     android:id="@+id/handle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
                     android:paddingLeft="@dimen/small_spacing"
                     android:paddingRight="@dimen/small_spacing"
                     android:textAppearance="@android:style/TextAppearance.Small"
+                    android:textSize="12sp"
                     tools:text="\@bob" />
 
                 <TextView
                     android:id="@+id/time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
                     android:gravity="end"
+                    android:textSize="14sp"
                     tools:text="9m" />
             </LinearLayout>
 
@@ -59,6 +67,9 @@
                 android:id="@+id/text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fontFamily="sans-serif-light"
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
                 tools:text="Some tweet text will go here. Sometimes a long one, up to 140 characters you know..." />
         </LinearLayout>
     </LinearLayout>
@@ -66,5 +77,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+        android:background="#ddd" />
 </LinearLayout>
