--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="small_spacing">4dp</dimen>
     <dimen name="normal_spacing">8dp</dimen>
     <dimen name="large_spacing">16dp</dimen>
+    <dimen name="largest_spacing">64dp</dimen>
+    <dimen name="avatar_size">48dp</dimen>
+
+    <dimen name="normal_text_size">14sp</dimen>
+    <dimen name="small_text_size">12sp</dimen>
 </resources>
